[package]
name = "temperature_converter"
version = "0.1.4"
authors = ["Michael Berry <trismegustis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "temperature_conversion"
path = "src/lib.rs"

[[bin]]
name = "temperature_converter"
path = "src/main.rs"

[dependencies]
