[package]
name = "temperature_converter"
version = "0.1.9"
authors = ["Michael Berry <trismegustis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "temperature_converter"
path = "src/main.rs"

[dependencies]
clap = "2"
